# Offline-LPC-Vocoder

./: .gitignore  CMakeLists.txt  LPC-Vocoder.sln  README.md
LPC-Vocoder/: .srt  LPC-Vocoder.vcxproj  LPC-Vocoder.vcxproj.filters  sprache.srt
LPC-Vocoder/src/: Einlesen.cpp  Einlesen.h  LPAnalysis.cpp  LPAnalysis.h  LPSynthesis.cpp  LPSynthesis.h  Write.cpp  Write.h  openLoopPitchEstimation.cpp  openLoopPitchEstimation.h  tools.cpp  tools.h  wavEinlesen.cpp  wavEinlesen.h  wavWrite.cpp  wavWrite.h
iksLib/: CMakeLists.txt  FIR.c  IIR.h  LTP.c  LTP.h  autocorrelation.h  correlation2Lsfs.c  iksLib.vcxproj  iksLib.vcxproj.filters  lpcref.c  lsflpcUtils.c  reflar.c  speech2Lsf.c  speech2Lsf.h
indLib/: FIR.h  IIR.c  autocorrelation.c  correlation2Lsfs.h  indLib.vcxproj  lpcref.h  lsflpcUtils.h  reflar.h  signalUtils.c  signalUtils.h
